[gd_scene load_steps=6 format=2]

[ext_resource path="res://circle-128.png" type="Texture" id=1]
[ext_resource path="res://Bullet/Bullet.gd" type="Script" id=2]
[ext_resource path="res://addons/smoothing/smoothing_2d.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Animation" id=2]
resource_name = "rotate"
tracks/0/type = "value"
tracks/0/path = NodePath("Smoothing2D/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Bullet" type="Area2D"]
position = Vector2( 1.00003, 1.00003 )
rotation = -0.785398
script = ExtResource( 2 )
velocity = Vector2( 1, 1 )
use_velocity = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 6.28319
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource( 3 )
target = NodePath("../CollisionShape2D")

[node name="Sprite" type="Sprite" parent="Smoothing2D"]
modulate = Color( 0.882353, 0.0352941, 0.0352941, 1 )
rotation = 6.28319
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 5.0
anims/rotate = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
